--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "@yawuxi/eslint-config-ts",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "ESLint configuration for React + Typescript development",
   "main": "index.js",
   "peerDependencies": {
     "eslint": "^8.43.0",
+    "typescript": "^5.1.6",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0"
   },
   "keywords": [
     "eslint",
